[tool.poetry]
name = "frida-ios-dump"
version = "0.1.0"
description = ""
authors = ["ngn999 <ngn998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
frida = "^16.1.4"
frida-tools = "^12.3.0"
asn1crypto = "^1.5.1"
bcrypt = "^4.0.1"
cffi = "^1.16.0"
colorama = "^0.4.6"
cryptography = "^41.0.4"
enum34 = "^1.1.10"
idna = "^3.4"
ipaddress = "^1.0.23"
paramiko = "^3.3.1"
prompt-toolkit = "^3.0.39"
pyasn1 = "^0.5.0"
pycparser = "^2.21"
pygments = "^2.16.1"
pynacl = "^1.5.0"
scp = "^0.14.5"
six = "^1.16.0"
tqdm = "^4.66.1"
wcwidth = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
